# pdf-glyph-mapping

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  doit.sh  manual.toml  mutool-extract.sh
glyph-dumper/: Cargo.toml  README.md
glyph-dumper/src/: main.rs
pdf-glyph-mapping/: Cargo.toml
pdf-glyph-mapping/src/: pdf_visit.rs
src/: devnagri_pdf_text.py  dump-glyphs.rs  dump-tjs.py  dump-tjs.rs  pdf_visit.rs  read-toml.rs  sample-runs.py  text_state.rs  validate-maps.py  validate-toml.py  validate_maps.py
tmp/: Tjs-40531-0.map  Tjs-40532-0.map  Tjs-40533-0  Tjs-40533-0.map  Tjs-40534-0  Tjs-40534-0.map  font-40531.ttf.html  font-40532.ttf.html  font-40533.ttf.html  font-40534.ttf.html
work/: Makefile  debug.sh  doit.sh  fromcsv.py  mutool-extract.sh  ran.sh  text.py  tocsv.py
work/example/: map-40531-0.toml  map-40532-0.toml  my-manual-page-200.txt  unabridged-page-201.txt  unabridged.fixed-page-201-with-re-fix.txt
work/helper_fonts/: README.md
work/maps/look/: font-40531-0-APZKLW+NotoSansDevanagari-Bold.html  font-40531-0-APZKLW+NotoSansDevanagari-Bold.toml  font-40532-0-ATMSNB+NotoSansDevanagari.html  font-40532-0-ATMSNB+NotoSansDevanagari.toml  font-40533-0-ASZHUB+Times-Roman.html  font-40533-0-ASZHUB+Times-Roman.toml  font-40534-0-ASLUDF+Times-Bold.html  font-40534-0-ASLUDF+Times-Bold.toml
work/maps/valid/: font-40531-0-APZKLW+NotoSansDevanagari-Bold.toml  font-40532-0-ATMSNB+NotoSansDevanagari.toml  font-40533-0-ASZHUB+Times-Roman.toml  font-40534-0-ASLUDF+Times-Bold.toml
