[package]
name = "pdf-glyph-mapping"
version = "0.1.0"
authors = ["Shreevatsa R <shreevatsa.public@gmail.com>"]
edition = "2018"

[[bin]]
name = "dump-glyphs"
path = "src/dump-glyphs.rs"

[[bin]]
name = "dump-tjs"
path = "src/dump-tjs.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = { version = "0.23", default-features = false, features = ["png"] }
ttf-parser = "0.12.3"
ab_glyph = "0.2.11"
clap = "3.0.0-beta.2"
lopdf = "0.26.0"
regex = "1.5.4"
itertools = "0.10.1"
pprof = { version = "0.4", features = ["flamegraph"] }
toml = "0.5.8"
anyhow = "1.0.42"
serde_derive = "1.0.127"
serde = "1.0.127"
text_io = "0.1.9"
glob = "0.3.0"
linked-hash-map = "0.5.4"

[profile.release]
debug = 2  # Add debug information for backtraces.
lto = true # Try to make it faster to run (slower to compile).
# codegen-units = 1 # Try to make it faster to run (slower to compile).
