[workspace]
members = [
    "pdf-glyph-mapping",
    "glyph-dumper"
]
resolver = "3"

# Workspace-wide release profile settings
[profile.release]
debug = 2 # Add debug information for backtraces.
# lto = true # Try to make it faster to run (slower to compile).
# codegen-units = 1 # Try to make it faster to run (slower to compile).
