[package]
name = "glyph-dumper"
version = "0.1.0"
authors = ["Shreevatsa R <shreevatsa.public@gmail.com>"]
edition = "2024"
description = "A tool to dump glyphs from TTF font files as bitmap images"

[dependencies]
image = { version = "0.23", default-features = false, features = ["png"] }
ttf-parser = "0.12.3"
ab_glyph = "0.2.11"
clap = "=3.0.0-beta.2"
clap_derive = "=3.0.0-beta.2"
anyhow = "1.0.42"