[package]
name = "pdf-glyph-mapping"
version = "0.1.0"
authors = ["Shreevatsa R <shreevatsa.public@gmail.com>"]
edition = "2024"

# Binary that dumps Tj (text) runs from the PDF.
[[bin]]
name = "dump-tjs"
path = "src/dump-tjs.rs"

[dependencies]
lopdf = "0.26.0"
regex = "1.5.4"
itertools = "0.10.1"
pprof = { version = "0.4", features = ["flamegraph"] }
toml = "0.5.8"
anyhow = "1.0.42"
serde_derive = "1.0.127"
serde = "1.0.127"
text_io = "0.1.9"
glob = "0.3.0"
linked-hash-map = "0.5.4"
serde_with = "1.10.0"
thiserror = "1.0.30"
log = "0.4.14"
env_logger = "0.9.0"
clap = "=3.0.0-beta.2"
clap_derive = "=3.0.0-beta.2"